--- a/config/locales/jp.yml
+++ b/config/locales/jp.yml
@@ -214,7 +214,7 @@ jp:
       not_have_health: "情報なし"
     destroy:
       delete_success: "プロジェクトは正常に破棄されました。"
-      delete_fail: "レポートを含むプロジェクトは削除できません。"
+      delete_fail: "このプロジェクトにはレポート、リソース、プロジェクト機能、またはリリース計画が含まれているため、削除できません。"
       fail_delete: "このプロジェクトは削除されていません。"
     cannot_delete: "このプロジェクトは削除できません。 マネージャーと管理者のみがプロジェクトを削除する権限を持っています。"
     cannot_edit: "このプロジェクトは編集できません。 プロジェクトを編集する権限を持つのはマネージャーと管理者だけです。"
@@ -308,8 +308,9 @@ jp:
       stt: "番号順"
       project_name: "プロジェクト名"
       day_report: "当日のレポート"
-      issue: "問題"
       description: "説明"
+      resource_description: "リソースの説明"
+      issue: "問題"
       action: "アクション"
       report_index: "レポート一覧"
     search_form:
