Fix screen resources

--- a/config/locales/jp.yml
+++ b/config/locales/jp.yml
@@ -112,7 +112,7 @@ jp:
       share: "共有"
       date_invalid: "日付形式が無効です"
       new_resource: "新しいリソース"
-      date_resource: "当日のリソース"
+      date_resource: "月/年"
       name: "プロジェクト名"
       resource_index: "リソースリスト"
       update_resource: "リソースを更新する"
@@ -121,8 +121,10 @@ jp:
       project_name: "プロジェクト名"
       man_month: "万/月"
       detail: "詳細"
-      date: "日付"
+      date_created: "作成日"
       action: "行動"
+      month: "月"
+      year: "年"
     form_resources:
       select_project: "プロジェクトを選択"
       date: "日付を選択してください"
