--- a/config/locales/vi.yml
+++ b/config/locales/vi.yml
@@ -112,7 +112,7 @@ vi:
       share: "Chia sẻ"
       date_invalid: "Định dạng ngày không hợp lệ"
       new_resource: "Thêm tài nguyên"
-      date_resource: "Ngày tạo"
+      date_resource: "Tháng/Năm"
       name: "Tên dự án"
       resource_index: "Danh sách tài nguyên"
       update_resource: "Cập nhật tài nguyên"
@@ -121,8 +121,10 @@ vi:
       project_name: "Tên dự án"
       man_month: "Số man/Month"
       detail: "Chi tiết"
-      date: "Ngày tháng"
+      date_created: "Ngày tạo"
       action: "Hành động"
+      month: "Tháng"
+      year: "Năm"
     form_resources:
       select_project: "Chọn dự án"
       date: "Chọn ngày"
