--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -112,7 +112,7 @@ en:
       share: "Share"
       date_invalid: "Date format invalid"
       new_resource: "New resource"
-      date_resource: "Date created"
+      date_resource: "Month/Year"
       name: "Project name"
       resource_index: "Resources List"
       update_resource: "Update resource"
@@ -121,8 +121,10 @@ en:
       project_name: "Project name"
       man_month: "man/Month"
       detail: "Detail"
-      date: "Date"
+      date_created: "Date created"
       action: "Action"
+      month: "month"
+      year: "year"
     form_resources:
       select_project: "Select project"
       date: "Select date"
