Fix screen new project health items

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -565,3 +565,6 @@ en:
       statistical_chart: "Statistical chart"
       total_number_projects: "Total number of projects:"
       project_quantity: "project quantity"
+    search:
+      start_month: "Start month"
+      end_month: "End month"
