--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -386,6 +386,7 @@ en:
       scope_release_description: "Scope release description"
       status: "Status"
       save: "Save"
+      released_at: "Actual release date"
     is_released:
       preparing: "Prepare for release"
       released: "Released"
