--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -170,6 +170,21 @@ en:
       stt: "No."
       project_index: "Projects List"
       created_at: "Created at"
+      export: "Export projects"
+      header_excel:
+        stt: "No."
+        name: "Project"
+        group: "Group"
+        user_name_created: "Username created"
+        description: "Description"
+        status: "Status"
+        repository: "Link repository"
+        redmine: "Link redmine"
+        project_folder: "Project folder"
+        language: "Project language"
+        created_at: "Created at"
+        start_date: "Project start date"
+        end_date: "Project end date"
     search_form:
       name: "Project name"
       group: "Group"
