--- a/config/locales/jp.yml
+++ b/config/locales/jp.yml
@@ -169,7 +169,22 @@ jp:
       new_project: "新しいプロジェクト"
       stt: "番号順"
       project_index: "プロジェクト一覧"
-      created_at: "で作成されました"
+      created_at: "作成日"
+      export: "プロジェクトのエクスポート"
+      header_excel:
+        stt: "番号順"
+        name: "プロジェクト名"
+        group: "グループ名"
+        user_name_created: "作成者名"
+        description: "説明"
+        status: "状態"
+        repository: "リポジトリリンク"
+        redmine: "Redmineのリンク"
+        project_folder: "プロジェクトフォルダー"
+        language: "プロジェクト言語"
+        created_at: "作成日"
+        start_date: "作成日から"
+        end_date: "作成日まで"
     search_form:
       name: "プロジェクト名"
       group: "グループ"
