--- a/config/locales/vi.yml
+++ b/config/locales/vi.yml
@@ -161,7 +161,7 @@ vi:
     index:
       name: "Dự án"
       status: "Trạng thái"
-      group: "Nhóm giam gia"
+      group: "Nhóm tham gia"
       action: "Hành động"
       start_date: "Ngày bắt đầu"
       end_date: "Ngày kết thúc"
@@ -170,6 +170,21 @@ vi:
       stt: "STT"
       project_index: "Danh sách dự án"
       created_at: "Ngày tạo"
+      export: "Xuất dự án"
+      header_excel:
+        stt: "STT"
+        name: "Dự án"
+        group: "Nhóm tham gia"
+        user_name_created: "Tên người tạo"
+        description: "Mô tả"
+        status: "Trạng thái"
+        repository: "Liên kết repository"
+        redmine: "Liên kết redmine"
+        project_folder: "Thư mục dự án"
+        language: "Ngôn ngữ dự án"
+        created_at: "Ngày tạo"
+        start_date: "Ngày bắt đầu"
+        end_date: "Ngày kết thúc"
     search_form:
       name: "Tên dự án"
       group: "Nhóm"
