--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -630,3 +630,18 @@ en:
       created_at: "Created at"
     cannot_delete: "Cannot delete lesson learn."
     you_sure?: "You sure?"
+  project_slack_settings:
+    project_slack_setting:
+      mention: "Receiver"
+    form:
+      receiver: "Receiver"
+      send_release: "Send message when released"
+      send_value: "Send a message when adding a new value"
+      send_resource: "Send a message when adding a new resource"
+      mention_notice: "Separated by commas, if mentioning multiple people. For example: U03ANFSJ17Z, K03ANFSJ17J"
+    new:
+      title: "Slack setting"
+    create:
+      create_success: "Create successfully!"
+      create_fail: "Creating new Slack setting failed!"
+    slack_mention_format: Mentions for each person are separated by ","!"
